completed job detail page, add job form, job form model and updated job controlled to pass job to job detail template

--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -11,6 +11,7 @@
         <h2>View All</h2>
         <ul>
             <li th:each="field : ${fields}">
+                <!-- below is an example of how to do query parameters in thymrleaf! -->
                 <a th:href="@{/list/values(column=${field})}" th:text="${field.name}"></a>
             </li>
         </ul>
